alignment styling fix

--- a/src/app.css
+++ b/src/app.css
@@ -105,10 +105,8 @@ text {
 }
 
 .main-content {
-  -webkit-overflow-scrolling: touch;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  width: 90%;
   position: static;
   padding-top: 5%;
 }
@@ -205,6 +203,7 @@ text {
     bottom: 50px;
     padding-top: 1%;
     font-size: .7em;
+    right: inherit;
   }
 
   #info-bar-sub-cont {
